--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -8,7 +8,7 @@
   background-image: url('https://www.themoviedb.org/assets/2/v4/logos/v2/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg');
   background-repeat: no-repeat;
   background-position: right;
-  background-color: rgb(115, 152, 255);
+  background-color: #7398ff;
 
   border: 1px solid black;
 }
