--- a/src/pages/trends/Trends.module.css
+++ b/src/pages/trends/Trends.module.css
@@ -34,3 +34,12 @@ h1 {
   flex-direction: column;
   padding: 5px 0;
 }
+
+.imgBox {
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 250px;
+  height: 80px;
+  margin: 10px auto;
+  box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.25);
+}
