--- a/src/pages/searchPage/SearchPage.module.css
+++ b/src/pages/searchPage/SearchPage.module.css
@@ -37,3 +37,11 @@
 .date {
   font-size: 16px;
 }
+.imgBox {
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 250px;
+  height: 80px;
+  margin: 10px auto;
+  box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.25);
+}
