--- a/src/pages/detailsPage/DetailsPage.module.css
+++ b/src/pages/detailsPage/DetailsPage.module.css
@@ -1,3 +1,8 @@
+.secBox {
+  width: 95%;
+  margin: 0 auto;
+}
+
 .linkBox {
   display: flex;
   flex-direction: row;
@@ -20,7 +25,7 @@
 .goBack {
   position: fixed;
   top: 15px;
-  left: 10px;
+  right: 10px;
   padding: 4px 6px;
   border: 1px solid #000;
   background-color: #fa6464;
@@ -34,7 +39,7 @@
   font-style: normal;
   font-weight: 700;
   width: 100%;
-  max-width: 90px;
+  max-width: 80px;
   margin: 0;
   margin-left: 10px;
 }
